# huginn-messenger-flutter

./: .gitignore  .gitmodules  .metadata  README.md  build.sh  docker-compose.yml  ffigen.yaml  pubspec.yaml
.github/workflows/: build.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/huginn_messenger/: BackgroundService.kt  MainActivity.kt
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
android/app/src/main/res/xml/: file_paths.xml
ios/: huginn_messenger.podspec
lib/: huginn_messenger.dart  huginn_messenger_bindings_generated.dart  main.dart
lib/src/ffi/: messenger_bridge.dart
lib/src/models/: app_event.dart  chat_message.dart  config.dart  group_chat.dart  peer.dart
lib/src/services/: messenger_service.dart  notification_service.dart  platform_service.dart
linux/: CMakeLists.txt
linux/runner/: CMakeLists.txt  my_application.cc
macos/: huginn_messenger.podspec
macos/Classes/: huginn_messenger.c
src/: CMakeLists.txt  bridge.go  build.sh  go.mod  go.sum  huginn_messenger.c  huginn_messenger.h  integration_test.go  libhuginn_messenger.h  main.go
src/android/armeabi-v7a/: libhuginn_messenger.h
src/android/x86_64/: libhuginn_messenger.h
src/docs/: architecture.md
src/internal/chunk/: chunk.go
src/internal/config/: config.go
src/internal/crypto/: crypto.go
src/internal/messenger/: messenger.go
src/internal/muninn/: client.go  rtc.go
src/internal/store/: chunkStore.go  messageStore.go  migration.go  peerStore.go  pendingChunkStore.go  sqlite.go
src/internal/store/migrations/sqlite/: 001_initial_schema.sql  002_add_chunk_ttl.sql
src/internal/ui/: server.go
src/internal/ui/static/: app.js  style.css
src/internal/webrtc/: webrtc.go
windows/: CMakeLists.txt
